--- a/src/UI/UI.form
+++ b/src/UI/UI.form
@@ -78,13 +78,14 @@
               <text value="Buscar por pais"/>
             </properties>
           </component>
-          <component id="5b81e" class="javax.swing.JButton" binding="button2" default-binding="true">
+          <component id="5b81e" class="javax.swing.JButton" binding="testButton1">
             <constraints>
               <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <focusable value="false"/>
-              <text value="Button"/>
+              <font name="Consolas" size="18" style="1"/>
+              <text value="TEST-1"/>
             </properties>
           </component>
           <component id="3b701" class="javax.swing.JButton" binding="buscarMayorButton" default-binding="true">
@@ -139,13 +140,15 @@
               <text value="Claro"/>
             </properties>
           </component>
-          <component id="c0412" class="javax.swing.JButton" binding="button3" default-binding="true">
+          <component id="c0412" class="javax.swing.JButton" binding="testButton2">
             <constraints>
               <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <focusable value="false"/>
-              <text value="Button"/>
+              <font name="Consolas" size="18" style="1"/>
+              <label value="TEST-2"/>
+              <text value="TEST-2"/>
             </properties>
           </component>
           <component id="967ca" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
@@ -167,7 +170,7 @@
             <properties>
               <background color="-657931"/>
               <focusable value="false"/>
-              <font name="Times New Roman" size="17" style="3"/>
+              <font name="Consolas" size="18" style="1"/>
               <foreground color="-13611010"/>
               <text value="Mostrar Arreglo"/>
             </properties>
@@ -260,7 +263,7 @@
               </component>
             </children>
           </grid>
-          <grid id="91b2" binding="addDog" layout-manager="GridLayoutManager" row-count="9" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="91b2" binding="addPetChildren" layout-manager="GridLayoutManager" row-count="9" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="20" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="7" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -649,6 +652,14 @@
             <border type="none"/>
             <children/>
           </grid>
+          <component id="b9099" class="javax.swing.JTable" binding="table1" default-binding="true">
+            <constraints>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
     </children>
